added screencast and screenshot of applicaiton with updated readme

--- a/Develop/output/team.html
+++ b/Develop/output/team.html
@@ -25,14 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card" style="margin: 0.2rem; box-shadow: 0px 10px 20px grey;">
     <div class="card-header bg-primary text-white">
-        <h2 class="card-title">John Simpson</h2>
+        <h2 class="card-title">John Doe</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body bg-light">
         <ul class="list-group">
-            <li class="list-group-item">ID: 12</li>
-            <li class="list-group-item">Email: <a href="mailto:johnthemanager@testcorp.com">johnthemanager@testcorp.com</a></li>
-            <li class="list-group-item">Office number: 1-888-888-8888</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:johnthemanager@corp.com">johnthemanager@corp.com</a></li>
+            <li class="list-group-item">Office number: 203calljohn</li>
         </ul>
     </div>
 </div>
@@ -43,47 +43,47 @@
     </div>
     <div class="card-body bg-light">
         <ul class="list-group">
-            <li class="list-group-item">ID: 13</li>
-            <li class="list-group-item">Email: <a href="mailto:stan@testcorp.com">stan@testcorp.com</a></li>
+            <li class="list-group-item">ID: 23</li>
+            <li class="list-group-item">Email: <a href="mailto:stanengineer@corp.com">stanengineer@corp.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/stancorptest" target="_blank" rel="noopener noreferrer">stancorptest</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card" style="margin: 0.2rem; box-shadow: 0px 10px 20px grey;">
     <div class="card-header bg-primary text-white">
-        <h2 class="card-title">Jacki James</h2>
+        <h2 class="card-title">Jacki Brains</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body bg-light">
         <ul class="list-group">
-            <li class="list-group-item">ID: 14</li>
-            <li class="list-group-item">Email: <a href="mailto:jacki@testcorp.com">jacki@testcorp.com</a></li>
+            <li class="list-group-item">ID: 65</li>
+            <li class="list-group-item">Email: <a href="mailto:jacks@corp.com">jacks@corp.com</a></li>
             <li class="list-group-item">GitHub: <a href="https://github.com/jackitestcorp" target="_blank" rel="noopener noreferrer">jackitestcorp</a></li>
         </ul>
     </div>
 </div>
 <div class="card employee-card" style="margin: 0.2rem; box-shadow: 0px 10px 20px grey;">
     <div class="card-header bg-primary text-white">
-        <h2 class="card-title">Paula T</h2>
+        <h2 class="card-title">Paula Intern</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body bg-light">
         <ul class="list-group">
             <li class="list-group-item">ID: 22</li>
-            <li class="list-group-item">Email: <a href="mailto:internp@testcorp.com">internp@testcorp.com</a></li>
+            <li class="list-group-item">Email: <a href="mailto:internp@corp.com">internp@corp.com</a></li>
             <li class="list-group-item">School: UConn</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card" style="margin: 0.2rem; box-shadow: 0px 10px 20px grey;">
     <div class="card-header bg-primary text-white">
-        <h2 class="card-title">Jake P</h2>
+        <h2 class="card-title">Jake Intern</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body bg-light">
         <ul class="list-group">
-            <li class="list-group-item">ID: 43</li>
-            <li class="list-group-item">Email: <a href="mailto:internj@corptest.com">internj@corptest.com</a></li>
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:internj@corp.com">internj@corp.com</a></li>
             <li class="list-group-item">School: UConn</li>
         </ul>
     </div>
